[tool.poetry]
name = "networksecurity"
version = "0.1.0"
description = ""
authors = ["Scott <scowty.sk@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
pyshark = "0.6"
psutil = "5.9.8"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
